week two bootcamp complete

--- a/Python-Bootcamp/Week-2/Data_structures_in_Python+(1).ipynb
+++ b/Python-Bootcamp/Week-2/Data_structures_in_Python+(1).ipynb
@@ -112,15 +112,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "D3bKLI8z2lSx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1991, 'Pratham', 12, 'Kulkarni']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create a list according to the given condition:"
+    "# Create a list according to the given condition:\n",
+    "list1=[1991, 'Pratham', 12, 'Kulkarni']\n",
+    "list1"
    ]
   },
   {
@@ -143,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -151,7 +164,8 @@
    },
    "outputs": [],
    "source": [
-    "# Create a list according to the given condition:"
+    "# Create a list according to the given condition\n",
+    "std=[['Alex','Cody'],['Mathematics','English'],[97,95],[89,92]]"
    ]
   },
   {
@@ -166,19 +180,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "r-05TqnN4hub"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n"
+     ]
+    }
+   ],
    "source": [
     "# Given below is a list:\n",
     "list3=[1,2,'r',7,'k',6,'o','h','d',5,9]\n",
-    "\n",
+    "k='k'\n",
     "# Define the character you are searching for:\n",
-    "\n",
+    "if k in list3:\n",
+    "    print(\"true\")\n",
+    "else:\n",
+    "    print('false')\n",
     "# print the result:"
    ]
   },
@@ -194,18 +219,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "J-CCGlN56gea"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'world'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Given below is the tuple:\n",
     "tuple1=(1,'hello','world','567')\n",
     "\n",
-    "# Print the 3rd element:"
+    "# Print the 3rd element:\n",
+    "tuple1[2]"
    ]
   },
   {
@@ -220,20 +257,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "VWmBEUud7MQ4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 25, 54, 67, 100]\n"
+     ]
+    }
+   ],
    "source": [
     "# Given below is the tuple:\n",
     "tuple2=(1,25,67,100,3,54)\n",
     "\n",
     "# Sort the tuple:\n",
-    "\n",
-    "# Print the result:"
+    "tuple3=sorted(tuple2)\n",
+    "# Print the result:\n",
+    "print(tuple3)"
    ]
   },
   {
@@ -248,22 +294,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "m8CcJfyB87eP"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Given below is the list:\n",
     "list4=[1,2,4,6,3,2,5,4,7,4,6,5,3,2,2,1]\n",
     "\n",
     "# Convert the list into set:\n",
-    "\n",
+    "set4=set(list4)\n",
     "# Print the result:\n",
-    "\n",
-    "# Print the length of the set:"
+    "print(set4)\n",
+    "# Print the length of the set:\n",
+    "len(set4)"
    ]
   },
   {
@@ -282,25 +347,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "04IIzknZ9-ZP"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "{2, 3, 5}\n",
+      "{1, 6, 7}\n",
+      "{1, 4, 6, 7, 8, 9}\n"
+     ]
+    }
+   ],
    "source": [
     "# Given below are two sets:\n",
     "a={1,2,3,5,6,7}\n",
     "b={4,5,8,9,2,3}\n",
     "\n",
     "# Print their union:\n",
-    "\n",
+    "print(a.union(b))\n",
     "# Print their intersection:\n",
-    "\n",
+    "print(a.intersection(b))\n",
     "# Print their difference:\n",
+    "print(a.difference(b))\n",
     "\n",
-    "# Print their symmetric difference:"
+    "# Print their symmetric difference:\n",
+    "print(a.symmetric_difference(b))"
    ]
   },
   {
@@ -320,17 +398,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Wf2kp70A_IfD"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Sam': 21, 'Cody': 12, 'Addy': 3, 'Zach': 45, 'Amy': 6}\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a dictionary:\n",
+    "dict={'Sam':21,'Cody':12,'Addy':3,'Zach': 45,'Amy':6}\n",
     "\n",
-    "# Print the result:"
+    "# Print the result:\n",
+    "print(dict)"
    ]
   },
   {
@@ -345,17 +433,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "rE_fsHnYEZFk"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Sam': 21, 'Cody': 12, 'Addy': 3, 'Zach': 47, 'Amy': 6}\n"
+     ]
+    }
+   ],
    "source": [
     "# Update the roll number:\n",
-    "\n",
-    "# Print the new dictionary:"
+    "dict['Zach']=47\n",
+    "# Print the new dictionary:\n",
+    "print(dict)"
    ]
   },
   {
@@ -370,16 +467,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "NrdUqjkvEpRC"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Addy', 'Amy', 'Cody', 'Sam', 'Zach']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Sort and print the students roll number wise in ascending order:"
+    "# Sort and print the students roll number wise in ascending orderso\n",
+    "sorted(dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
